[gd_scene load_steps=21 format=2]

[ext_resource path="res://Assets/shipsMiscellaneous_sheet.png" type="Texture" id=1]
[ext_resource path="res://Scripts/PlayerShip_GB.gd" type="Script" id=2]
[ext_resource path="res://Scenes/shmup_cannonball_GB.tscn" type="PackedScene" id=3]
[ext_resource path="res://Assets/cannon_fire_1.wav" type="AudioStream" id=4]
[ext_resource path="res://Assets/cannon_fire_2.wav" type="AudioStream" id=5]
[ext_resource path="res://Assets/cannon_fire_3.wav" type="AudioStream" id=6]
[ext_resource path="res://Assets/flash_shader_mat.tres" type="Material" id=7]
[ext_resource path="res://Assets/player_dead_ship.png" type="Texture" id=8]
[ext_resource path="res://Assets/player_dead_fsail.png" type="Texture" id=9]
[ext_resource path="res://Assets/player_dead_msail.png" type="Texture" id=10]
[ext_resource path="res://Assets/boom.tres" type="Texture" id=11]
[ext_resource path="res://Assets/explode.wav" type="AudioStream" id=12]
[ext_resource path="res://Assets/hammer.wav" type="AudioStream" id=13]

[sub_resource type="CapsuleShape2D" id=1]
radius = 11.5777
height = 52.141

[sub_resource type="CapsuleShape2D" id=2]
radius = 12.7669
height = 56.3177

[sub_resource type="Animation" id=3]
resource_name = "flash"
tracks/0/type = "value"
tracks/0/path = NodePath(".:material:shader_param/flash_mod")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0.0, 1.0, 0.0, 1.0, 0.0, 1.0, 0.0, 1.0, 0.0, 1.0, 0.0 ]
}

[sub_resource type="ParticlesMaterial" id=4]
flag_disable_z = true
direction = Vector3( 0, 1, 0 )
spread = 25.0
gravity = Vector3( 0, 600, 0 )
initial_velocity = 300.0
initial_velocity_random = 0.2
angular_velocity = 74.12
angular_velocity_random = 0.1
orbit_velocity = 0.0
orbit_velocity_random = 0.0

[sub_resource type="ParticlesMaterial" id=5]
flag_disable_z = true
direction = Vector3( 1, 1, 0 )
spread = 15.0
gravity = Vector3( 0, -600, 0 )
initial_velocity = 260.0
initial_velocity_random = 0.2
angular_velocity = 25.0
angular_velocity_random = 0.1
orbit_velocity = 0.0
orbit_velocity_random = 0.0

[sub_resource type="ParticlesMaterial" id=6]
flag_disable_z = true
direction = Vector3( -1, 1, 0 )
spread = 20.0
gravity = Vector3( 0, -600, 0 )
initial_velocity = 260.0
angular_velocity = 35.0
angular_velocity_random = 0.1
orbit_velocity = 0.0
orbit_velocity_random = 0.0

[sub_resource type="ParticlesMaterial" id=7]
flag_disable_z = true
direction = Vector3( 0, 0, 0 )
spread = 180.0
gravity = Vector3( 0, 0, 0 )
initial_velocity = 90.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0
scale = 0.9

[node name="PlayerShip_GB" type="KinematicBody2D" groups=[
"player",
]]
material = ExtResource( 7 )
rotation = 3.14159
script = ExtResource( 2 )
__meta__ = {
"_edit_group_": true
}
bullet = ExtResource( 3 )

[node name="Sprite" type="Sprite" parent="."]
use_parent_material = true
z_index = 1
texture = ExtResource( 1 )
region_enabled = true
region_rect = Rect2( 204, 115, 66, 113 )

[node name="kin_collision" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="shot_pos" type="Position2D" parent="."]
position = Vector2( 0, 65 )

[node name="shot_timer" type="Timer" parent="."]
wait_time = 0.4

[node name="cannon_1" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
mix_target = 2
bus = "Effects"

[node name="cannon_2" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )
mix_target = 2
bus = "Effects"

[node name="cannon_3" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )
mix_target = 2
bus = "Effects"

[node name="collision" type="Area2D" parent="." groups=[
"player",
]]
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="collision"]
shape = SubResource( 2 )

[node name="iframe_timer" type="Timer" parent="."]

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/flash = SubResource( 3 )

[node name="Health2" type="Sprite" parent="."]
visible = false
use_parent_material = true
texture = ExtResource( 1 )
region_enabled = true
region_rect = Rect2( 0, 77, 66, 113 )

[node name="Health1" type="Sprite" parent="."]
visible = false
use_parent_material = true
texture = ExtResource( 1 )
region_enabled = true
region_rect = Rect2( 272, 230, 66, 113 )

[node name="msail_d" type="Particles2D" parent="."]
emitting = false
amount = 1
lifetime = 10.0
one_shot = true
local_coords = false
process_material = SubResource( 4 )
texture = ExtResource( 10 )

[node name="fsail_d" type="Particles2D" parent="."]
emitting = false
amount = 1
lifetime = 10.0
one_shot = true
process_material = SubResource( 5 )
texture = ExtResource( 9 )

[node name="ship_d" type="Particles2D" parent="."]
emitting = false
amount = 1
lifetime = 10.0
one_shot = true
process_material = SubResource( 6 )
texture = ExtResource( 8 )

[node name="boom" type="Particles2D" parent="."]
emitting = false
amount = 5
lifetime = 0.5
one_shot = true
explosiveness = 1.0
process_material = SubResource( 7 )
texture = ExtResource( 11 )

[node name="explode" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 12 )
volume_db = -10.0
mix_target = 2
bus = "Effects"

[node name="hammer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 13 )
volume_db = -4.0
mix_target = 2
bus = "Effects"
[connection signal="timeout" from="shot_timer" to="." method="_on_shot_timer_timeout"]
[connection signal="area_shape_entered" from="collision" to="." method="_on_collision_area_shape_entered"]
[connection signal="body_shape_entered" from="collision" to="." method="_on_collision_body_shape_entered"]
[connection signal="timeout" from="iframe_timer" to="." method="_on_iframe_timer_timeout"]
